// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logOperation can enhance async operationFunction inherit meta passed to req.meta from previous middleware and log them 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
      "userId": "mock-id",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
      "userId": "mock-id",
    },
  ],
]
`;

exports[`logOperation can enhance async operationFunction to invoke operationFunction with operationFunction name in req.meta.operation 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`logOperation can enhance async operationFunction to log operaitonFunction on success 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;

exports[`logOperation can enhance async operationFunction to log operationFunction name as operation name 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;

exports[`logOperation can enhance async operationFunction to log operationFunction on failure and throw the caught error 1`] = `Array []`;

exports[`logOperation can enhance async operationFunction to log operationFunction on failure and throw the caught error 2`] = `
Array [
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "Not Found",
      "operation": "operationFunction",
      "result": "failure",
      "status": 404,
    },
  ],
]
`;

exports[`logOperation can enhance sync operationFunction inherit meta passed to req.meta from previous middleware and log them 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
      "userId": "mock-id",
    },
  ],
]
`;

exports[`logOperation can enhance sync operationFunction to invoke operationFunction with operationFunction name in req.meta.operation 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`logOperation can enhance sync operationFunction to log operaitonFunction on success 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`logOperation can enhance sync operationFunction to log operationFunction name as operation name 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`logOperation can enhance sync operationFunction to log operationFunction on failure and throw the caught error 1`] = `Array []`;

exports[`logOperation can enhance sync operationFunction to log operationFunction on failure and throw the caught error 2`] = `
Array [
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "Not Found",
      "operation": "operationFunction",
      "result": "failure",
      "status": 404,
    },
  ],
]
`;
